[package]
name = "yu_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
actix-rt = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
async-trait = "0.1"
reqwest = "0.11"
log = "0.4.14"
env_logger = "0.9.0"
openssl = "0.10.34"
base64 = "0.13.0"
rand = "0.8"
lazy_static = "1.4"
mongodb = "2.1.1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"